<resources>
    <string name="app_name">Tradosa</string>
    <string name="facebook_app_id">168378980585268</string>
    <string name="fb_login_protocol_scheme">fb168378980585268</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="action_settings">Settings</string>
    <string name="loi">Lỗi kết nối! Đang thử kết nối lại</string>
    <string name="not_internet">Mất kết nối internet!</string>
    <string name="ok">Đồng ý</string>
    <string name="cancle">Hủy</string>
    <string name="trangchu">Trang chủ</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="thongbao">Thông báo</string>
    <string name="canhan">Cá nhân</string>
    <string name="exchanged">Trao đổi</string>
    <string name="tk">Tìm những cuốn sách ưa thích</string>
    <string name="chinh_sua_thong_tin">Chỉnh sửa thông tin cá nhân</string>
    <string name="not_login">Bạn chưa đăng nhập!</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="bd_ca_nhan">Bài đăng cá nhân</string>
    <string name="danh_gia">Đánh giá về sản phẩm</string>
    <string name="v_nhan_xet">Viết nhận xét</string>
    <string name="x_nhan_xet">Xem nhận xét</string>
    <string name="an_nhan_xet">Ẩn nhận xét</string>
    <string name="ua_thich">Ưa thích</string>
    <string name="gui_nhan_xet">Gửi nhận xét</string>
    <string name="noi_dung">Nội dung</string>
    <string name="ten">Tên của bạn</string>
    <string name="sl_danh_gia">Đang có </string>
    <string name="nx">nhận xét</string>
    <string name="khong_de_trong">Chưa nhập đủ thông tin</string>
    <string name="nx_thanh_cong">Gửi nhận xét thành công</string>
    <string name="thong_bao">Thông báo</string>
    <string name="question_delete_product">Bạn có muốn xóa cuốn sách này khỏi giỏ hàng?</string>
    <string name="question_quit_app">Bạn có muốn thoát ứng dụng không?</string>
    <string name="question_delete_group_chat">Bạn có muốn xóa cuộc trò chuyện này không?</string>
    <string name="question_delete_comment">Bạn thực sự muốn xóa bình luận này?</string>
    <string name="quit">Thoát</string>
    <string name="question_delete_news">Bạn có thực sự muốn xóa bài đăng này?</string>
    <string name="delete">Xóa</string>
    <string name="thanh_toan">Xác nhận thanh toán</string>
    <string name="doi_tai_khoan">Đổi tài khoản</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="xem_them">Xem thêm</string>
    <string name="uu_dai">Ưu đãi của tôi</string>
    <string name="ls_giao_dich">Lịch sử giao dịch</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="dia_chi">Địa chỉ *</string>
    <string name="dia_chi_tt">Địa chỉ thanh toán</string>
    <string name="ma_buu_dien">Mã bưu điện(nếu có)</string>
    <string name="tinh">Tỉnh</string>
    <string name="phuong_thuc_tt">Phương thức thanh toán</string>
    <string name="phuong_thuc_vc">Phương thức vận chuyển</string>
    <string name="xn_ap_can_thanh_toan">Xác nhận lại các sản phẩm cần thanh toán</string>
    <string name="nhap_lai_dt">Nhập lại số điện thoại *</string>
    <string name="chuyen_nh">Chuyển khoản bằng qua thẻ ngân hàng</string>
    <string name="chuyen1">Từ 3-10 ngày làm việc: %d vnđ</string>
    <string name="chuyen2">Từ 2-4 ngày làm việc: %d vnđ</string>
    <string name="chuyen_tien_mat">Thanh toán tiền mặt khi nhận hàng</string>
    <string name="done">Xong</string>
    <string name="next">Tiếp</string>
    <string name="price">Giá</string>
    <string name="save">Lưu</string>
    <string name="chua_chon_anh">Chưa chọn ảnh</string>
    <string name="chua_nhap_noi_dung">Chưa nhập nội dung</string>
    <string name="chua_nhap_du_thong_tin">Chưa nhập nhập đủ thông tin</string>
    <string name="chua_nhap_du_ten_tk">Bạn chưa nhập đủ tên tài khoản</string>
    <string name="chua_nhap_du_mk">Bạn chưa nhập đủ mật khẩu</string>
    <string name="chua_nhap_du_ki_tu">Mật khẩu tối thiểu phải có 6 kí tự</string>
    <string name="chua_nhap_du_ki_tu_tk">Tên tài khoản phải có ít nhất 2 kí tự</string>
    <string name="chua_ki_tu_dac_biet">Tên tài khoản chứa kí tự đặc biệt</string>
    <string name="chua_nhap_du_ten">Chưa nhập đủ tên</string>
    <string name="false_phone">Số điện thoại có thể chưa chính xác</string>
    <string name="tk_mk_false">Tài khoản hoặc mật khẩu chưa chính xác</string>
    <string name="email_ko_hop_le">Email không hợp lệ</string>
    <string name="no_create_foder_image">Không thể tạo thư mục ảnh</string>
    <string name="luu_anh_success">Lưu ảnh thành công</string>
    <string name="share_image">Chia sẻ ảnh</string>
    <string name="tang_dan">Tăng dần</string>
    <string name="giam_dan">Giảm dần</string>
    <string name="tat_ca_sach">Tất cả các cuốn sách</string>
    <string name="het_bai_dang">Các bài đăng đã được hiển thị hết</string>
    <string name="luu_gb_success">Lưu vào giỏ bài thành công</string>
    <string name="luu_gb_fails">Đã có trong giỏ bài</string>
    <string name="bai_dang_se_dc_luu">Bài đăng sẽ được lưu trong giỏ bài của bạn</string>
    <string name="xoa_bai_success">Xóa bài thành công</string>
    <string name="xoa_bai_fails">Xóa bài thất bại, vui lòng thử lại</string>
    <string name="sp_cho_thanh_toan">Các sản phầm chờ thanh toán</string>
    <string name="ko_co_cuon_sach">Không có cuốn sách nào trong giỏ hàng</string>
    <string name="thanh_toan_gh">Thanh toán</string>
    <string name="xn_don_hang">Xác nhận đơn hàng</string>
    <string name="goi_qua">Gói quà 10.000 vnđ</string>
    <string name="ghi_chu">Ghi chú của khách hàng</string>
    <string name="tong_tien">Tổng tiền: </string>
    <string name="tong_tien_pc">Tổng tiền phải trả: </string>
    <string name="trang_chu">Trang chủ</string>
    <string name="tat_ca_dm">Tất cả danh mục</string>
    <string name="khuyen_mai">Khuyến mãi</string>
    <string name="ban_chay">Bán chạy</string>
    <string name="danh_gia_app">Đánh giá</string>
    <string name="ve_ct">Về chúng tôi</string>
    <string name="viet_bl">Viết bình luận...</string>
    <string name="s_moi_nhat">Sách mới nhất</string>
    <string name="s_best_seller">Best sellers</string>
    <string name="s_kinh_dien">Sách kinh điển</string>
    <string name="s_kinh_te">Sách kinh tế</string>
    <string name="s_tam_ly">Sách tâm lý</string>
    <string name="s_van_hoc">Sách văn học</string>
    <string name="s_truyen_tranh">Truyện tranh</string>
    <string name="s_tuoi_teen">Sách Tuổi teen</string>
    <string name="s_nuoi_day_tre">Sách nuôi dạy trẻ</string>
    <string name="s_khoa_hoc">Sách khoa học</string>
    <string name="s_nuoc_ngoai">Sách nước ngoài</string>
    <string name="please_wait">Please wait...</string>
    <string name="exist_user">Tài khoản đã tồn tại</string>
    <string name="dk_tk_success">Đăng kí tài khoản thành công</string>
    <string name="tk_mk_chua_chinh_xac">Tài khoản hoặc mật khẩu chưa chính xác</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="sp_da_co_trong_gh">Sản phẩm này đã có trong giỏ hàng</string>
    <string name="add_gh_success">Thêm vào giỏ hàng thành công</string>
    <string name="bia_cung">Bìa cứng</string>
    <string name="bia_mem">Bìa mềm</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="mk">Mật khẩu</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="remember_pass">Nhớ mật khẩu</string>
    <string name="no_remember_pass">Không nhớ mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="loai_s">Loại sách</string>
    <string name="gia_m">Giá mới</string>
    <string name="gia_c">Giá cũ</string>
    <string name="ten_s">Tên sách</string>
    <string name="chon_mua">Chọn mua</string>
    <string name="gt_cuon_sach">Giới thiệu về cuốn sách</string>
    <string name="detail">Thông tin chi tiết</string>
    <string name="sach_lien_quan">Một số sách liên quan</string>
    <string name="giam_gia">Giảm giá</string>
    <string name="gia_s">Giá sách</string>
    <string name="content">Nội dung</string>
    <string name="so_luong">Số lượng</string>
    <string name="them_gh">Thêm vào giỏ hàng</string>
    <string name="nhap_tn">Nhập tin nhắn</string>
    <string name="no_group">Không có cuộc trò chuyện nào</string>
    <string name="chua_dang_nhap_cd">Bạn chưa đăng nhập, hãy đăng nhập để tham gia vào cộng đồng trao đổi sách</string>
    <string name="email">Email</string>
    <string name="chat_shop">Chat shop</string>
    <string name="message">Tin nhắn</string>
</resources>
