<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/btnAcessInformation"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/xac_nhan"
            android:visibility="gone"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_text_bt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ls_giao_dich"
                android:gravity="center|left"
                android:drawablePadding="5sp"
                android:paddingLeft="5sp"
                android:textSize="12sp"
                android:drawableLeft="@drawable/ic_chrome_reader_mode_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/xem_them"
                android:gravity="center|right"
                android:drawablePadding="5sp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_text_bt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/uu_dai"
                android:gravity="center|left"
                android:drawablePadding="5sp"
                android:paddingLeft="5sp"
                android:drawableLeft="@drawable/ic_insert_invitation_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/xem_them"
                android:gravity="center|right"
                android:drawablePadding="5sp"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:text="@string/doi_mat_khau"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/boder_text_canhan"
        android:layout_marginTop="15sp"/>
    <Button
        android:id="@+id/btnDoiTaiKhoan"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:text="@string/doi_tai_khoan"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/boder_text_canhan"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"/>
</LinearLayout>