<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal">
<RelativeLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:id="@+id/ln_anh"
    android:layout_width="match_parent"
    android:layout_height="200sp"
    android:gravity="center">
    <ImageView
        android:id="@+id/imgHinhSach"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ProgressBar
        android:id="@+id/progressBarImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progresscustombg"/>

</FrameLayout>
    <TextView
        android:id="@+id/txtLS"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/loai_s"
        android:layout_below="@+id/ln_anh"
        android:gravity="center|left"
        android:background="@drawable/border_text_bt"
        android:textColor="@android:color/black"
        android:paddingLeft="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ln_gia_s"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:layout_below="@id/txtLS">
        <TextView
            android:id="@+id/txtGiaMoi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gia_m"
            android:gravity="center|left"
            android:paddingLeft="20sp"
            android:textColor="#880E4F"/>
        <TextView
            android:id="@+id/txtGiaCu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gia_c"
            android:gravity="center|right"
            android:paddingRight="20sp"
            android:textColor="#880E4F"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_mua"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        android:layout_below="@id/ln_gia_s">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/txtTenSach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ten_s"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtTinhTrang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10sp">
            <Button
                android:id="@+id/btnChonMua"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/chon_mua"
                android:layout_weight="1"
                android:background="@drawable/logo9"
                android:textColor="@android:color/white"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"/>
            <View
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_uudai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_mua"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/uu_dai"
            android:gravity="center|left"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="10sp"
            android:background="@drawable/border_text_bt"/>
        <ListView
            android:id="@+id/lvUudai"
            android:layout_width="match_parent"
            android:layout_height="100sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_gioi_thieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/ln_uudai">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/gt_cuon_sach"
            android:gravity="center|left"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="10sp"
            android:background="@drawable/border_text_bt"/>
        <TextView
            android:id="@+id/txtChiTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:padding="5sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_chi_tiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_gioi_thieu"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/detail"
            android:gravity="center|left"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="10sp"
            android:background="@drawable/border_text_bt"/>
        <include android:id="@+id/tttt"
            layout="@layout/item_information_book"/>
    </LinearLayout>
    <include layout="@layout/layout_evaluetion"/>
    <LinearLayout
        android:id="@+id/ln_goi_y"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:layout_below="@id/ln_danh_gia"
        android:gravity="center"
        android:background="@drawable/border_text_bt">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:text="@string/sach_lien_quan"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:paddingLeft="10sp"/>

        <TextView
            android:layout_width="90sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/xem_them"
            android:drawableRight="@drawable/ic_fast_forward_black_24dp"
            android:src="@drawable/ic_fast_forward_black_24dp"
            android:background="#00000000"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="10sp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="270sp"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:background="#eee6ff"
        android:layout_below="@+id/ln_goi_y">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleGoiYSach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ProgressBar
            android:id="@+id/progressBarGoiYSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progresscustombg"/>
    </FrameLayout>
</RelativeLayout>
</ScrollView>
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:background="#00000000"/>
    <TextView
        android:id="@+id/txtGiamGia"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/giam_gia"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/border_text_giam_gia"
        android:layout_gravity="top|right"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"/>
</FrameLayout>